# AI_assestment

./: .dockerignore  .env.example  .gitignore  Academy Assistant - Webhook RAG Escalation (1).json  Dockerfile  README.md  TODO.md  docker-compose.yml  n8n-workflow.json  pyproject.toml  requirements.txt
data/documents/: horarios.md  inscripciones.md  niveles.md  precios.md
docs/: Rubrica_Prueba_Desempeno-AI_Automatizador.xlsx
scripts/: ingest.py  metrics.py
src/api/: app.py
src/api/routes/: chat.py
src/config/: settings.py
src/core/: chroma_telemetry.py  llm.py  prompts.py  retriever.py  vectorstore.py
src/data/: loaders.py
src/utils/: token_counter.py
tests/: conftest.py  test_core.py
