[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-language-assistant"
version = "0.1.0"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.32.0",
  "pydantic-settings==2.5.2",
  "langchain==0.3.4",
  "langchain-ollama==0.3.1",
  "langchain-chroma==0.1.4",
  "chromadb==0.5.11",
  "langchain-community==0.3.3",
  "python-dotenv==1.0.1",
  "pytest==8.3.3",
  "httpx==0.27.2",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
